feat(Music): Add control to play music

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 <body>
 	<div class="btn">Button</div>
+	<input class="input" type="text" />
+
+	<audio id="audioMusic" src="audio/Music.mp3"></audio>
+	<audio id="audioBuzz" src="audio/WrongBuzzer.mp3"></audio>
+	<audio id="audioDing" src="audio/RightDing.mp3"></audio>
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
