feat: Add styling

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
 	<title>Musical Chairs</title>
 
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 
 </head>
 
 <body>
-	<div class="btn">Button</div>
-	<input class="input" type="text" />
+	<div class="background-img">
+		<div class="title">Musical Chairs</div>
+		<input type="text" class="input" />
+	</div>
 
 	<audio id="audioMusic" src="audio/Music.mp3"></audio>
 	<audio id="audioBuzz" src="audio/WrongBuzzer.mp3"></audio>
 	<audio id="audioDing" src="audio/RightDing.mp3"></audio>
+	<audio id="audioWin" src="audio/Win.mp3"></audio>
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
